eks_manifest/k8s_manifest_yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: example-namespace
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
